endpoint for editing meal
